Change the header main sec and add About sec and load page animation

--- a/index.html
+++ b/index.html
@@ -10,10 +10,29 @@
     <title>The Car Rental</title>
   </head>
   <body>
+    <!-- load page Animation -->
+    <div id="animation">
+      <div class="page-bg"></div>
+
+      <div class="preloader">
+        <div class="preloader-box">
+          <span>L</span>
+          <span>O</span>
+          <span>A</span>
+          <span>D</span>
+          <span>I</span>
+          <span>N</span>
+          <span>G</span>
+        </div>
+      </div>
+    </div>
     <!-- Start header -->
     <header>
       <h1><a href="#">The Car Rental</a></h1>
       <nav>
+        <li>
+          <a href="#"><i class="fa-solid fa-house"></i></a>
+        </li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#cars">Cars</a></li>
@@ -31,7 +50,16 @@
     </section>
     <!-- End mainsec -->
 
-
+    <!-- Start About sec -->
+    <section id="about">
+      <h1 class="title text-center">About</h1>
+      <h5 class="text-center">
+        Our mission is to provide you with the best and
+        <br />
+        most suitable cars to rent from this site and anywhere you want
+      </h5>
+    </section>
+    <!-- End About sec -->
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
