change the porject and add services section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
         <h1>The Best Car Rental In The World</h1>
         <h4>The Most Specialized Car Rental Website</h4>
       </div>
+      <div class="icons">
+        <a href="https://instagram.com" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://whatsapp.com" target="_blank"
+          ><i class="fa-brands fa-whatsapp"></i
+        ></a>
+        <a href="https://telegram.org" target="_blank"
+          ><i class="fa-brands fa-telegram"></i
+        ></a>
+        <a href="https://facebok.com" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="https://youtube.com" target="_blank"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+        <a href="https://x.com" target="_blank"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+        <a href="https://tiktok.com" target="_blank"
+          ><i class="fa-brands fa-tiktok"></i
+        ></a>
+      </div>
     </section>
     <!-- End mainsec -->
 
@@ -60,6 +83,29 @@
       </h5>
     </section>
     <!-- End About sec -->
+
+    <!-- Start services sec -->
+    <section id="services">
+      <h1 class="title text-center">Services</h1>
+      <div class="container">
+        <div class="box">
+          <i class="fa-solid fa-shop fa-2x fa-fw"></i>
+          <span class="num" data-goal="100">0</span>
+          <span class="text">Our Branches</span>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-earth-africa fa-2x fa-fw"></i>
+          <span class="num" data-goal="110">0</span>
+          <span class="text">Country</span>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-car fa-2x fa-fw"></i>
+          <span class="num" data-goal="200">0</span>
+          <span class="text">Car brand</span>
+        </div>
+      </div>
+    </section>
+    <!-- End services sec -->
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
