--- a/index.html
+++ b/index.html
@@ -107,6 +107,38 @@
     </section>
     <!-- End services sec -->
 
+     <!-- Start car sec -->
+      <!-- <section id="cars">
+        <h1 class="title text-center">Cars</h1>
+        <div class="cards m-5">
+          <div class="card" style="width: 18rem;">
+            <img src="images/images.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="images/images.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="images/images.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </section> -->
+     <!-- End car sec -->
+
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
   </body>
